packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/index.svelte
<a id="get" href="/errors/endpoint-throws/get">GET</a>

<form action="/errors/endpoint-throws/post" method="post">
	<button type="submit" id="post">POST</button>
</form>
